[package]
name = "signal_playground"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.8"
tokio = { version = "1.50.0", features = ["full"] }
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
hex = "0.4.3"
csv = "1.4"
clap = { version = "4.6", features = ["derive"] }
rand = "0.9.2"
uuid = { version = "1.5", features = ["serde", "v4"] }
bincode = "1.3.3"
cpu-time = "1.0"
allocation-counter = "0.8.1"
libsignal-core = { path = "libsignal-main/rust/core" }
signal-crypto = { path = "libsignal-main/rust/crypto" }
hkdf = "0.12"
sha2 = "0.10"

[patch.crates-io]
curve25519-dalek = { git = "https://github.com/signalapp/curve25519-dalek", tag = "signal-curve25519-4.1.3" }
